--- a/_sass/_web.scss
+++ b/_sass/_web.scss
@@ -21,7 +21,8 @@
 				border-top-color: $color-1;
 
 				.title {
-					color: $color-3;
+					color: white;
+					//color: $color-3;
 				}
 
 			}
